MDEV-5344: LEFT OUTER JOIN table data is lost in ON DUPLICATE KEY UPDATE section - For INSERT ... SELECT ... ON DUPLICATE KEY UPDATE, table elimination should   check which tables are referenced in the ON DUPLICATE KEY UPDATE clause.